# Discovery

./: .env.example  README.md  acumen_projects.py  check_gitlab_token.py  check_tool_support.py  client.py  generate_gitlab_token_guide.md  gitlab_debug_test.py  langchain_mcp_client.py  main.py  mcp_chatbot.py  mcp_client.py  pyproject.toml  server.py  server_config.json  streamlit_app.py  streamlit_v6.py  test_server.py
